[project]
name = "pr-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.47.0",
]
